@@ -1,3 +1,7 @@
+  07 Feb 2014; Manuel Rüger <mrueg@gentoo.org> zenbook-als-0_p20140129.ebuild,
+  zenbook-als-9999.ebuild:
+  [app-laptop/zenbook-als] Add missing RDEPEND.
+
 *zenbook-als-0_p20140129 (07 Feb 2014)
 *zenbook-als-9999 (07 Feb 2014)
 
